--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ section.contact-section{
   align-items: center;
   color: #fff;
 }
-section.contact-section .section-title h4, a{
+section.contact-section .section-title h4{
   color: #fff;
 }
 .contact-form {
