--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ font-style: normal;
   background-color: #064976;
   margin-top: 2rem;
 }
-.skill-section div{
+.about-card{
   width: 80vw;
   padding: 2rem;
 }
