--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Lora", "Monseratt", "Hindi Madurai", serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
   background-position: center top;
   background-repeat: no-repeat;
   font-family: "Hind Madurai", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .top-menu {
@@ -87,6 +89,7 @@ body {
   border: none;
   font-weight: 700;
   background-color: gold;
+  border: 2px solid transparent;
 }
 .contact-form button, .hero-buttons button a {
   text-decoration: none;
@@ -226,13 +229,17 @@ font-style: normal;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #064976;
+  background-color: #fff;
   margin-top: 2rem;
 }
 .about-card{
-  width: 80vw;
   padding: 2rem;
+  margin: 1rem;
 }
+.about-card p{
+  text-align: center;
+}
+
 .skill-section marquee li{
   display: inline;
   list-style: none;
@@ -265,11 +272,10 @@ section.contact-section .section-title h4{
 .contact-form {
   margin: 0 2rem;
   margin-top: 1.5rem;
-  /* background-color: rgb(0, 0, 0, 0.2); */
   background-color: #064976;
   padding: 2rem;
   border-radius: 1rem;
-  box-shadow: black 1px 1px 5px 1px;
+  box-shadow: 0 0 60px 5px black;
 }
 .contact-form input, textarea{
   border-radius: 0.2rem;
