--- a/style.css
+++ b/style.css
@@ -116,11 +116,39 @@ body {
   display: flex;
   gap: 1rem;
 }
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .projects .items {
     display: flex;
     flex-direction: column;
   }
+  .top-menu nav{
+    display: none;
+  }
+  .top-menu{
+    justify-content: center;
+    flex-direction: row;
+  }
+  .top-menu img{
+    margin: 0 1rem;
+  }
+}
+@media screen and (min-width:1440px) {
+  .skill-section .about-card{
+    width: 90%;
+    margin-top: -10rem;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-card p{
+    align-self: center;
+  }
+  .hero-section{
+    height: 100vh;
+  }
+  .project-section div.section-title h4{
+    padding: 0;
+    }
 }
 .projects .project-box {
   width: 100vh;
@@ -145,7 +173,7 @@ body {
 .project-section {
   background-color: #fff;
   text-align: center;
-  padding: 4rem 0;
+  padding: 0 4rem;
 }
 
 .project-section div.section-title h4{
@@ -235,9 +263,12 @@ font-style: normal;
 .about-card{
   padding: 2rem;
   margin: 1rem;
+  box-sizing: inherit;
 }
 .about-card p{
   text-align: center;
+  width: 80%;
+  line-height: 2;
 }
 
 .skill-section marquee li{
