--- a/style.css
+++ b/style.css
@@ -116,40 +116,7 @@ body {
   display: flex;
   gap: 1rem;
 }
-@media (max-width: 768px) {
-  .projects .items {
-    display: flex;
-    flex-direction: column;
-  }
-  .top-menu nav{
-    display: none;
-  }
-  .top-menu{
-    justify-content: center;
-    flex-direction: row;
-  }
-  .top-menu img{
-    margin: 0 1rem;
-  }
-}
-@media screen and (min-width:1440px) {
-  .skill-section .about-card{
-    width: 90%;
-    margin-top: -10rem;
-    line-height: 2;
-    display: flex;
-    flex-direction: column;
-  }
-  .about-card p{
-    align-self: center;
-  }
-  .hero-section{
-    height: 100vh;
-  }
-  .project-section div.section-title h4{
-    padding: 0;
-    }
-}
+
 .projects .project-box {
   width: 100vh;
 }
@@ -317,4 +284,82 @@ margin: 0.5rem 0;
 }
 .contact-form button{
   margin-left: 0;
+}
+
+.project-section .more-section{
+  height: 3rem;
+}
+
+@media screen and (min-width:1440px) {
+  .skill-section .about-card{
+    width: 90%;
+    margin-top: -10rem;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+  }
+  .about-card p{
+    align-self: center;
+  }
+  .hero-section{
+    height: 100vh;
+  }
+  .project-section div.section-title h4{
+    padding: 0;
+    }
+}
+
+@media screen and (min-width:1366px) {
+  .hero-section{
+    height: 100vh;
+  }
+  .skill-section .about-card{
+    width: 80%;
+    margin-top: -3rem;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width:1024px) {
+  .hero-section{
+    height: 100vh;
+  }
+  .skill-section .about-card{
+    width: 75%;
+    margin-top: -3rem;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+  }
+  .skill-section .about-card p{
+    width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .projects .items {
+    display: flex;
+    flex-direction: column;
+  }
+  .top-menu nav{
+    display: none;
+  }
+  .top-menu{
+    justify-content: center;
+    flex-direction: row;
+  }
+  .top-menu img{
+    margin: 0 1rem;
+  }
+}
+
+@media screen and (min-width: 1920px){
+  .skill-section .about-card{
+    width: 70%;
+    margin-top: -12rem;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+  }
 }
